[package]
name = "justicar"
version = "0.1.0"
edition = "2021"

[dependencies]
sgx-attestation = { workspace = true }
eth = { workspace = true, default-features = true }
handover = { workspace = true }
hex = { workspace = true, features = ["alloc"] }
chrono = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true, features = ["macros", "multipart"] }
async-trait = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
secp256k1 = { workspace = true, features = ["default", "recovery"] }
rand = { workspace = true }
bip39 = { workspace = true, features = ["std", "rand"] }
alloy = { workspace = true }
ipfs-cid = { workspace = true }
clap = { workspace = true, features = ["derive"] }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
bloom = { workspace = true }
tiny-keccak = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tower-http = { workspace = true, features = ["limit", "trace"] }
