[package]
name = "sgx-attestation"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = { workspace = true, features = ["alloc"] }
serde = { workspace = true, features = ["derive"] }
pink-json = { workspace = true, default-features = false }
base64 = { workspace = true, features = ["alloc"] }
scale = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = [
    "derive",
] }
chrono = { workspace = true, features = ["alloc", "serde"] }
const-oid = { workspace = true, default-features = false }
x509-cert = { workspace = true, default-features = false }
byteorder = { workspace = true, default-features = false }
pem = { workspace = true, default-features = false }
asn1_der = { workspace = true, default-features = false, features = [
    "native_types",
] }
der = { workspace = true, default-features = false, features = ["alloc"] }

log = { workspace = true, default-features = false }

anyhow = { workspace = true, optional = true }

ring = { workspace = true, optional = true, default-features = false, features = [
    "alloc",
] }
reqwest = { workspace = true, optional = true, default-features = false, features = [
    "rustls-tls",
    "blocking",
    "hickory-dns",
] }
urlencoding = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true, features = [
    "preserve_order",
] }
tracing = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

webpki = { workspace = true, features = ["alloc", "ring"] }

[dev-dependencies]
insta = "1"

[features]
default = ["std", "report", "verify"]
std = [
    "pink-json/std",
    "serde/std",
    "scale/std",
    "scale-info/std",
    "ring/std",
    "webpki/std",
    "const-oid/std",
    "pem/std",
    "asn1_der/std",
    "der/std",
    "serde_json",
    "anyhow",
    "reqwest",
    "urlencoding",
]
report = ["std", "tracing", "tokio"]
verify = ["ring", "webpki/ring"]
